# doco

./: .gitignore  .pre-commit-config.yaml  .taplo.toml  .yamllint.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  justfile
.flox/: env.json
.flox/env/: manifest.toml
.github/: labelflair.toml
.github/workflows/: axum.yml  ci.yml  labelflair.yml  leptos.yml  publish.yml  release.yml  rust.yml
crates/doco/: Cargo.toml
crates/doco-derive/: Cargo.toml
crates/doco-derive/src/: lib.rs
crates/doco/examples/: tracing_fixture.rs
crates/doco/src/: client.rs  environment.rs  lib.rs  server.rs  service.rs  session.rs  test_runner.rs  tracing_init.rs  viewport.rs
crates/doco/tests/: tracing.rs
examples/axum-postgres/: Cargo.toml  Dockerfile
examples/leptos/: Dockerfile
examples/leptos/e2e/: main.rs
