[package]
name = "doco-derive"

version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

readme = "../../README.md"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.37"
syn = { version = "3.0.0", features = ["full"] }
