[package]
name = "doco"

version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

readme = "../../README.md"

[dependencies]
anyhow = "1.0.86"
doco-derive = { path = "../doco-derive", version = "0.2.0" }
thirtyfour = "0.36"
getset = "0.1.2"
inventory = "0.3.15"
libtest-mimic = "0.8"
reqwest = "0.13.0"
testcontainers = "0.27.0"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
typed-builder = "0.23.0"

[dev-dependencies]
axum = "0.8.0"
